# rustmx

./: Cargo.toml  functions.js  styles.css
docs/: index.html
docs/pkg/: rustmx.js  rustmx_bg.wasm
src/: lib.rs  omdb_api.rs  storage.rs
src/templates/: structs.rs
templates/: grid.html  movie.html  search.html
